--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -169,6 +169,8 @@ err_duplicateSocialNumber= Codice fiscale già esistente
 
 err_badImport=Impossibile trovare un utente con la data matricola
 
+err_db=Si è verificato un errore all'interno del database
+
 info_badLogin=Matricola o password errati
 info_badLogin_detail=Matricola o password errati: inserire i valori corretti
 
